# template

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  Makefile.usage.txt  README.md
.github/actions/builder/: action.yml
.github/actions/configs/: action.yml
.github/actions/gxx-alter/: action.yml
.github/actions/testing/: action.yml
.github/workflows/: lingccmn.yml  lingccmx.yml  linos-max-debug.yml  linos-max-flash.yml  linos-min-debug.yml  linos-min-flash.yml  macclgmx.yml  macos-max-flash.yml  winmsvmn.yml  winmsvmx.yml  winos-max-debug.yml  winos-max-flash.yml  winos-min-flash.yml
source/: CMakeLists.txt
testing/: CMakeLists.txt
